--- a/ActivityTracker/ActivityTracker/ActivityTracker.csproj
+++ b/ActivityTracker/ActivityTracker/ActivityTracker.csproj
@@ -38,13 +38,11 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -123,7 +121,7 @@
     <ProjectReference Include="..\Components.ActivityTracker\Components.ActivityTracker.csproj">
       <Project>{f237821d-cbe1-4479-8ee7-d8a429363fd0}</Project>
       <Name>Components.ActivityTracker</Name>
-      <Private>False</Private>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
