--- a/ActivityTracker/Library.ActivityTracker/Library.ActivityTracker.csproj
+++ b/ActivityTracker/Library.ActivityTracker/Library.ActivityTracker.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Models\ActivityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ActivitiesViewModel.cs" />
+    <Compile Include="ViewModels\ActivityInputControlsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Components.ActivityTracker\Components.ActivityTracker.csproj">
