--- a/ActivityTracker/Library.ActivityTracker/Library.ActivityTracker.csproj
+++ b/ActivityTracker/Library.ActivityTracker/Library.ActivityTracker.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Models\ActivityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\EnsureMinimumElementsAttribute.cs" />
     <Compile Include="ViewModels\ActivitiesViewModel.cs" />
     <Compile Include="ViewModels\ActivityInputControlsViewModel.cs" />
   </ItemGroup>
