Added unit test project
started writing to file (#5)

removed unused view model

--- a/ActivityTracker/ActivityTracker/ActivityTracker.csproj
+++ b/ActivityTracker/ActivityTracker/ActivityTracker.csproj
@@ -84,6 +84,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AppSettings.cs" />
+    <Compile Include="Properties\AssemblyInfoEx.cs" />
     <Compile Include="Views\ActivitiesView.xaml.cs">
       <DependentUpon>ActivitiesView.xaml</DependentUpon>
     </Compile>
