--- a/ActivityTracker/Library.ActivityTracker/Library.ActivityTracker.csproj
+++ b/ActivityTracker/Library.ActivityTracker/Library.ActivityTracker.csproj
@@ -54,11 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivitiesWriter.cs" />
     <Compile Include="Models\ActivityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfoEx.cs" />
     <Compile Include="Validation\EnsureMinimumElementsAttribute.cs" />
     <Compile Include="ViewModels\ActivitiesViewModel.cs" />
-    <Compile Include="ViewModels\ActivityInputControlsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Components.ActivityTracker\Components.ActivityTracker.csproj">
