--- a/ActivityTracker/ActivityTrackerTests/ActivityTrackerTests.csproj
+++ b/ActivityTracker/ActivityTrackerTests/ActivityTrackerTests.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
@@ -53,6 +54,9 @@
     <Compile Include="TestCases\AppSettingsTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\ActivityTracker\App.config">
+      <Link>App.config</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
