added ActivityType to distinguish between different types of activities.

--- a/ActivityTracker/ActivityTracker/ActivityTracker.csproj
+++ b/ActivityTracker/ActivityTracker/ActivityTracker.csproj
@@ -112,7 +112,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="XamlStyles\StyleResources.xaml">
+    <Page Include="XamlStyles\StyleResourcesActivityInputControlsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="XamlStyles\StyleResourcesActivitiesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
