--- a/ActivityTracker/Components.ActivityTracker/Components.ActivityTracker.csproj
+++ b/ActivityTracker/Components.ActivityTracker/Components.ActivityTracker.csproj
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IActivityModel.cs" />
+    <Compile Include="ActivityType.cs" />
+    <Compile Include="IActivityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
